<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_splash">

    <fragment
        android:id="@+id/navigation_splash"
        android:name="com.fluffydevs.journeybeacon.presentation.splash.SplashFragment"
        android:label="@string/title_splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/navigation_login"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/stationary"
            app:popEnterAnim="@anim/stationary"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/navigation_splash"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/stationary"
            app:popEnterAnim="@anim/stationary"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/navigation_splash"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fluffydevs.journeybeacon.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.fluffydevs.journeybeacon.presentation.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.fluffydevs.journeybeacon.presentation.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_toLoginFragment"
            app:destination="@id/navigation_login"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/stationary"
            app:popEnterAnim="@anim/stationary"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/navigation_splash"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.fluffydevs.journeybeacon.presentation.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/slide_up"
            app:exitAnim="@anim/stationary"
            app:popEnterAnim="@anim/stationary"
            app:popExitAnim="@anim/slide_down"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>